--- a/toughnag/templates/host_status.html
+++ b/toughnag/templates/host_status.html
@@ -28,7 +28,7 @@
              % for host in hosts:
             <thead>
             <tr>
-                <th colspan=5 class="status_header">${host.host_name} - ${host.alias}</th>
+                <th colspan=5 class="status_header"><span class="glyphicon glyphicon-cog"></span> ${host.host_name} - ${host.alias}</th>
             </tr>
             </thead>             
              % for service in host.get_effective_services():
