--- a/toughnag/templates/base.html
+++ b/toughnag/templates/base.html
@@ -58,7 +58,7 @@
                                 <div id="collapseOne" class="accordion-body collapse in">
                                     <div class="accordion-inner ">
                                     <li><a href="/manage/option">系统参数配置</a></li>
-                                    <li><a href="/manage/group">主机群组配置</a></li>
+                                    <li><a href="/manage/group">主机组配置</a></li>
                                     <li><a href="/manage/host">主机节点配置</a></li>
                                     <li><a href="/manage/nagios/ctl">Nagios控制管理</a></li>
                                 </div>
