--- a/toughnag/templates/host_status.html
+++ b/toughnag/templates/host_status.html
@@ -13,6 +13,25 @@
 <div class="panel panel-default">
     <div class="panel-heading"><span class="glyphicon glyphicon-th"></span> 主机状态列表</div>
     <div class="panel-body">
+         <form class="form-horizontal pull-left" role="form" action="/manage/status/hosts" method="post">
+            ${handler.xsrf_form_html()}
+            <div class="form-group">
+                <label for="group_name" class="col-md-4 control-label">主机分组</label>
+                <div class="col-md-6">
+                    <select id="group_name" name="group_name" class="form-control" >
+                        <option></option>
+                        % for group in groups:
+                        <option value="${group.hostgroup_name}" ${group.hostgroup_name == curr_group and "selected" or ""}>${group.alias}</option>
+                        % endfor
+                    </select>
+                </div>
+                <div class="col-md-2">
+                    <button type="submit" class="btn btn-default">查询</button>
+                </div>
+            </div>
+        </form>
+        # <div class="clearfix"></div>
+        <hr>
 
         <table class="table table-condensed">
             <thead>
@@ -46,8 +65,6 @@
             % endfor
             </tbody>
         </table>
-        
-        
     </div>
 </div>
 </%def>
