--- a/toughnag/templates/hosts.html
+++ b/toughnag/templates/hosts.html
@@ -13,6 +13,27 @@
 <div class="panel panel-default">
     <div class="panel-heading"><span class="glyphicon glyphicon-th"></span> 主机列表</div>
     <div class="panel-body">
+
+         <form class="form-horizontal pull-left" role="form" action="/manage/host" method="post">
+            ${handler.xsrf_form_html()}
+            <div class="form-group">
+                <label for="group_name" class="col-md-4 control-label">主机分组</label>
+                <div class="col-md-6">
+                    <select id="group_name" name="group_name" class="form-control" >
+                        <option></option>
+                        % for group in groups:
+                        <option value="${group.hostgroup_name}" ${group.hostgroup_name == curr_group and "selected" or ""}>${group.alias}</option>
+                        % endfor
+                    </select>
+                </div>
+                <div class="col-md-2">
+                    <button type="submit" class="btn btn-default">查询</button>
+                </div>
+            </div>
+        </form>
+        <div class="clearfix"></div>
+        <hr>
+
         <div class="pull-right bottom10">
             <a href="/manage/host/add" class="btn btn-sm btn-default">
                 <span class="glyphicon glyphicon-plus"></span> 添加主机
