--- a/toughnag/templates/nagiosctl.html
+++ b/toughnag/templates/nagiosctl.html
@@ -38,21 +38,21 @@
                 <tbody>
                     <tr>
                         <td>刷新配置文件</td>
-                        <td><button id="reload" type="button" class="btn btn-sm btn-default exec">执行</button></td>
+                        <td><button id="reload" type="button" class="btn btn-sm btn-info exec">执行</button></td>
                         <td>检测配置文件</td>
-                        <td><button id="verify" type="button" class="btn btn-sm btn-default exec">执行</button></td>
+                        <td><button id="verify" type="button" class="btn btn-sm btn-info exec">执行</button></td>
                     </tr>
                     <tr>
                         <td>停止Nagios进程</td>
-                        <td><button id="stop" type="button" class="btn btn-sm btn-default exec">执行</button></td>
+                        <td><button id="stop" type="button" class="btn btn-sm btn-info exec">执行</button></td>
                         <td>启动Nagios进程</td>
-                        <td><button id="start" type="button" class="btn btn-sm btn-default exec">执行</button></td>
+                        <td><button id="start" type="button" class="btn btn-sm btn-info exec">执行</button></td>
                     </tr>    
                     <tr>
                         <td>重启Nagios进程</td>
-                        <td><button id="restart" type="button" class="btn btn-sm btn-default exec">执行</button></td>
+                        <td><button id="restart" type="button" class="btn btn-sm btn-info exec">执行</button></td>
                         <td>当前Nagios状态</td>
-                        <td><button id="status" type="button" class="btn btn-sm btn-default exec">执行</button></td>
+                        <td><button id="status" type="button" class="btn btn-sm btn-info exec">执行</button></td>
                     </tr>                                       
             </tbody>
         </table>
