--- a/toughnag/templates/host_perf.html
+++ b/toughnag/templates/host_perf.html
@@ -4,26 +4,22 @@
 <script src="/static/js/highcharts.js" type="text/javascript"></script>
 <script src="/static/js/charttheme.js" type="text/javascript"></script>
 <script>
-<%
-  
-  ds = [ str(d['data']['usage']) for d in diskdata]
-
-%>
 $(function () {
     $('#container').highcharts({
+        credits : {
+            enabled:false
+        },
         chart: {
          type: 'area'
         },
         title: {
-            text: '磁盘用量'
+            text: '${host_name}磁盘用量'
         },
         subtitle: {
             text: ''
         },
         xAxis: {
-            title: {
-                text: null
-            }
+            type: 'datetime'
         },
         yAxis: {
             max: 100,
@@ -40,26 +36,24 @@ $(function () {
         },
         legend: {
             enabled: false
-        },
+        },    
         plotOptions: {
             area: {
-                pointStart: 0,
+                stacking: 'normal',
+                lineColor: '#666666',
+                lineWidth: 1,
                 marker: {
-                    enabled: false,
-                    symbol: 'circle',
-                    radius: 2,
-                    states: {
-                        hover: {
-                            enabled: true
-                        }
-                    }
+                    lineWidth: 1,
+                    lineColor: '#666666'
                 }
             }
         },        
-        series: [{
-            name: 'Disk Usage',
-            data: [${','.join(ds)}]
-        }]
+        series: [
+            {
+                name: "usage",
+                data: [${','.join( '[%s,%s]'%(k,v) for k,v in disk_usage.items() )}]
+            }
+        ]
     });
 });
 </script>
@@ -69,7 +63,7 @@ $(function () {
     <div class="panel-heading"><span class="glyphicon glyphicon-th"></span> 主机性能监控</div>
     <div class="panel-body">
 
-        <div id="container"></div>   
+        <div id="container" class="perf-chart"></div>   
         
     </div>
 </div>
