--- a/toughnag/templates/host_perf.html
+++ b/toughnag/templates/host_perf.html
@@ -3,13 +3,31 @@
 <%def name="head()">
 <script src="/static/js/highcharts.js" type="text/javascript"></script>
 <script src="/static/js/charttheme.js" type="text/javascript"></script>
+<script src="/static/js/bootstrap-datepicker.js"></script>
+<link rel="stylesheet" href="/static/js/datepicker.css">
 <script>
+function updateHost() {
+    var group_name = $("#group_name").val();
+    $.get("/manage/perfdata/hosts?group_name=" + group_name, function (ev) {
+        $("#host_name").empty();
+        $.each(ev.data, function (index, host) {
+            var is_sel = '${host_name}' == host.host_name ? "selected" : "";
+            $("#host_name").append("<option value='" + host.host_name + "'"+is_sel+">" + host.host_desc + "</option>");
+        });
+    }, "json");
+}
+
+
 $(function () {
+
+    $("#day_code").datepicker();
+
     Highcharts.setOptions({ global: { useUTC: false } });   
-    $('#disk-chart').highcharts({
+
+    var disk_options = {
         credits : {enabled:false},
-        chart: {type: 'area'},
-        title: {text: '${host_name} - 磁盘用量'},
+        chart: {type: 'area',renderTo: 'disk-chart',},
+        title: {text: '${host_name} - 磁盘使用量'},
         subtitle: {text: ''},
         xAxis: {type: 'datetime',tickInterval : 3600*1000},
         yAxis: {max: 100,min: 0,title: {text: '百分比'},
@@ -18,15 +36,12 @@ $(function () {
         tooltip: {shared: true},
         legend: {enabled: false},    
         plotOptions: {area: {stacking: 'normal'}},        
-        series: [{
-                name: "usage",
-                data: [${','.join( '[%s,%s]'%(k,v) for k,v in disk_usage.items() )}]
-        }]
-    });
+        series:  [{}]
+    };
 
-    $('#swap-chart').highcharts({
+    var swap_options = {
         credits : {enabled:false},
-        chart: {type: 'area'},
+        chart: {type: 'area',renderTo: 'swap-chart',},
         title: {text: '${host_name} - 交换分区使用量'},
         subtitle: {text: ''},
         xAxis: {type: 'datetime',tickInterval : 3600*1000},
@@ -36,14 +51,11 @@ $(function () {
         tooltip: {shared: true},
         legend: {enabled: false},    
         plotOptions: {area: {stacking: 'normal'}},             
-        series: [{
-                name: "usage",
-                data: [${','.join( '[%s,%s]'%(k,v) for k,v in swap_usage.items() )}]
-        }]
-    });
+        series: [{}]
+    };
 
-    $('#load-chart').highcharts({
-        chart: {type: 'area'},
+    var load_options ={
+        chart: {type: 'area',renderTo: 'load-chart',},
         title: {text: '${host_name} - 系统负载'},
         legend: {enabled: true},  
         xAxis: {type: 'datetime',tickInterval : 3600*1000},
@@ -51,17 +63,32 @@ $(function () {
         tooltip: {shared: true},
         credits: {enabled: false},
         plotOptions: {area: {stacking: 'normal',}},     
-        series: [{
-            name: '1分钟负载',
-            data: [${','.join( '[%s,%s]'%(k,v['load1']) for k,v in load_perf.items() if v)}]
-        }, {
-            name: '5分钟负载',
-            data: [${','.join( '[%s,%s]'%(k,v['load5']) for k,v in load_perf.items() if v)}]
-        }, {
-            name: '15分钟负载',
-            data: [${','.join( '[%s,%s]'%(k,v['load15']) for k,v in load_perf.items() if v)}]
-        }]
-    });
+        series: [{},{},{}]
+    };
+
+    params = {host_name:"${host_name}","begin_time":"${begin_time}","end_time":"${end_time}",_xsrf: '${handler.xsrf_token}'};
+    $.post("/manage/perfdata/disk_usage", params, function (ev) {
+        if (ev.code == 0) {
+            disk_options.series = ev.data;
+            var chart = new Highcharts.Chart(disk_options);
+        }
+    },"json");
+
+    $.post("/manage/perfdata/swap_usage", params, function (ev) {
+        if (ev.code == 0) {
+            swap_options.series = ev.data;
+            var chart = new Highcharts.Chart(swap_options);
+        }
+    },"json");
+
+    $.post("/manage/perfdata/load_perf", params, function (ev) {
+        if (ev.code == 0) {
+            load_options.series = ev.data;
+            var chart = new Highcharts.Chart(load_options);
+        }
+    },"json");    
+
+    updateHost();    
 
 });
 
@@ -71,6 +98,67 @@ $(function () {
 <div class="panel panel-default">
     <div class="panel-heading"><span class="glyphicon glyphicon-th"></span> 主机性能监控</div>
     <div class="panel-body">
+
+         <form class="form-horizontal" role="form" action="/manage/perfdata" method="post">
+            ${handler.xsrf_form_html()}
+            <div class="form-group">
+                <label for="group_name" class="col-md-2 control-label">主机分组</label>
+                <div class="col-md-3">
+                    <select id="group_name" name="group_name" class="form-control" onchange="updateHost();">
+                        <option></option>
+                        % for group in groups:
+                        <option value="${group.hostgroup_name}" ${group.hostgroup_name == group_name and "selected" or ""}>${group.alias}</option>
+                        % endfor
+                    </select>
+                </div>
+                <label for="group_name" class="col-md-2 control-label">主机</label>
+                <div class="col-md-3">
+                    <select id="host_name" name="host_name" class="form-control" >
+                    </select>
+                </div>                
+
+            </div>
+            <div class="form-group">
+               <label for="day_code" class="col-md-2 control-label">日期</label>
+
+                <div class="col-md-3">
+                    <input type="text" id="day_code" name="day_code" class="form-control" value="${day_code or utils.get_currdate()}">
+                </div>
+                <div class="col-md-2">
+                    <button type="submit" class="btn btn-default">查询</button>
+                </div>                
+            </div>
+        </form>
+        <div class="clearfix"></div>
+        <hr>
+        <div class="perf-table">
+        <table class="table table-condensed">
+            <thead>
+            <tr>
+                <th>服务名</th>
+                <th>状态</th>
+                <th>最后检测</th>
+                <th>尝试次数</th>
+                <th>状态信息</th>
+            </tr>
+            </thead>
+            <tbody>
+           
+             % for service in host.get_effective_services():
+             <% 
+                 curr_status =  service.get_current_status()
+             %>
+            <tr >
+                <td>${service.get_shortname()}</td>
+                <td class="${STYLE[int(curr_status['current_state'])]}">${STATUS[int(curr_status['current_state'])]}</td>
+                <td>${utils.get_datetime(float(curr_status['last_check']))}</td>
+                <td>${curr_status['current_attempt']}/${curr_status['max_attempts']}</td>
+                <td>${curr_status['plugin_output']}</td>
+            </tr>
+            % endfor
+            </tbody>
+        </table>
+        </div>
 
         <div id="disk-chart" class="perf-chart"></div>   
         <div id="swap-chart" class="perf-chart"></div>   
