--- a/toughnag/templates/host_status.html
+++ b/toughnag/templates/host_status.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </form>
-        # <div class="clearfix"></div>
+        <div class="clearfix"></div>
         <hr>
 
         <table class="table table-condensed">
