--- a/toughnag/templates/base.html
+++ b/toughnag/templates/base.html
@@ -8,8 +8,8 @@
         <meta name="author" content="">
         <link rel="shortcut icon" href="/static/media/image/favicon.ico"/>
         <title>${system_name or ''}</title>
-        <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-        <link href="/static/css/manage.css" rel="stylesheet">
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="all">
+        <link href="/static/css/manage.css" rel="stylesheet" media="all">     
         <script src="/static/js/jquery-1.11.0.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
         <script src="/static/js/json2.js"></script>
