--- a/toughnag/templates/host_status.html
+++ b/toughnag/templates/host_status.html
@@ -1,23 +1,37 @@
 <%inherit file="base.html"/>
 
-<%def name="head()">
+<%def name="head()">  
+<style> 
+@media print{
+ .perflink {display:none;}
+ body{font-size: 11px;}
+}
+</style>
 <script>
     function deleteHost(host_name) {
         if (confirm("确认删除吗？")) {
             window.location.href = "/manage/host/delete?host_name=" + host_name;
         }
     }
+    function doPrint()
+    {
+         var newstr = document.getElementById("print-area").innerHTML;
+         var oldstr = document.body.innerHTML;
+         document.body.innerHTML=newstr;
+         window.print();
+         document.body.innerHTML=oldstr;   
+    }    
 </script>
 </%def>
 <%def name="body()">
 <div class="panel panel-default">
     <div class="panel-heading"><span class="glyphicon glyphicon-th"></span> 主机状态列表</div>
     <div class="panel-body">
-         <form class="form-horizontal pull-left" role="form" action="/manage/status/hosts" method="post">
+         <form class="form-horizontal" role="form" action="/manage/status/hosts" method="post">
             ${handler.xsrf_form_html()}
             <div class="form-group">
-                <label for="group_name" class="col-md-4 control-label">主机分组</label>
-                <div class="col-md-6">
+                <label for="group_name" class="col-md-3 control-label">主机分组</label>
+                <div class="col-md-4">
                     <select id="group_name" name="group_name" class="form-control" >
                         <option></option>
                         % for group in groups:
@@ -25,21 +39,22 @@
                         % endfor
                     </select>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-5">
                     <button type="submit" class="btn btn-default">查询</button>
+                    <button type="button" class="btn btn-default" onclick="doPrint();">打印</button>
                 </div>
             </div>
         </form>
         <div class="clearfix"></div>
         <hr>
-
+        <div id="print-area">
         <table class="table table-condensed">
             <thead>
             <tr>
                 <th>服务名</th>
                 <th>状态</th>
                 <th>最后检测</th>
-                <th>尝试次数</th>
+                <th>重试</th>
                 <th>状态信息</th>
             </tr>
             </thead>
@@ -47,7 +62,7 @@
              % for host in hosts:
             <thead>
             <tr>
-                <th colspan=5 class="status_header"><span class="glyphicon glyphicon-cog"></span> ${host.host_name} - ${host.alias} (<a href="/manage/perfdata?host_name=${host.host_name}">性能监控</a>)</th>
+                <th colspan=5 class="status_header"><span class="glyphicon glyphicon-cog"></span> ${host.host_name} - ${host.alias} <span class="perflink">(<a href="/manage/perfdata?host_name=${host.host_name}">性能监控</a>)</span></th>
             </tr>
             </thead>             
              % for service in host.get_effective_services():
@@ -65,6 +80,7 @@
             % endfor
             </tbody>
         </table>
+       </div> 
     </div>
 </div>
 </%def>
