--- a/toughnms/views/host_perf.html
+++ b/toughnms/views/host_perf.html
@@ -125,6 +125,7 @@ function doPrint()
         <div class="box-header">
             <i class="fa fa-desktop"></i>
             <h3 class="box-title">主机性能监控</h3>
+            <div class="bar pull-right"><a href="javascript:history.go(-1);">返回</a></div>
         </div>
         <div class="box-body">
         <div class="container">
