--- a/toughnms/views/services.html
+++ b/toughnms/views/services.html
@@ -15,6 +15,7 @@
         <div class="box-header">
             <i class="fa fa-gavel"></i>
             <h3 class="box-title">服务管理</h3>
+            <div class="bar pull-right"><a href="javascript:history.go(-1);">返回</a></div>
         </div>
         <div class="box-body">
             <div class="container">
